# utilities

./: .asciidoctorconfig  .deepsource.toml  .editorconfig  .flake8  .gitignore  LICENSE  MANIFEST.in  README.adoc  README.html  __main__.py  cli.py  constants.py  custom_logger.py  dict.yaml  examples.adoc  generate_executable.py  pyproject.toml  requirements.txt  results.txt  run_flake8.py  utilities.exe.spec  utilities.spec  vulture.txt
.github/workflows/: build.yml
_temp/: runner.py
auxiliary/: _table_convert.py  auto_yaml.py  autoupdate.py  cell.py  check_text.py  clear_column.py  clear_values  column.py  congestion.md  convert_table.py  file.yaml  generate_yaml.py  hashing_files.py  http_module.py  neuro.py  parse_open_api.py  powershell_complete.py  pretty_cli.py  pretty_cli_input.txt  runner.py  substitute.py  system_info.py  table.py  table_convert.py  table_items.py  table_logic.py  table_transform.py  timer.py  tree_builder.py  ui.py
auxiliary/_temp/: pyproject.toml
auxiliary/gui/: _gui.py  gui.py  shared.py  tui.py  ui.py
common/: constants.py  custom_logger.py  errors.py  functions.py  timer.py
css/: default.css  footer.css  general.css  theme.css
docs/: README_add_hook.adoc  README_auto_update.adoc  README_check_russian.adoc  README_check_yml.adoc  README_config_file.adoc  README_convert_tables.adoc  README_filter_images.adoc  README_format_code.adoc  README_generate_yaml.adoc  README_get_terms.adoc  README_help.adoc  README_link_repair.adoc  README_list_files.adoc  README_no_russian.adoc  README_reduce_image.adoc  README_reduce_images.adoc  README_repair_links.adoc  README_repair_svg.adoc  README_set_table_cols.adoc  README_substitute.adoc  README_table_cols.adoc  README_terms.adoc  README_validate_yaml.adoc  README_validate_yaml_file.adoc  manual.adoc
docs/partials/: check-russian.adoc  check_yml_sample.adoc  convert-tables.adoc  filter-images.adoc  format-code.adoc  generate-yaml.adoc  get_path.adoc  help.adoc  link-repair.adoc  list-files.adoc  no_russian_sample.adoc  reduce-image.adoc  repair-svg.adoc  run.adoc  table-cols.adoc  validate-yaml.adoc
locales/: click.pot  typer.pot  utilities.pot
repair_link/: __init__.py  main.py
repair_link/dir_file/: __init__.py  const.py  dir_file.py  file_dict.py  text_file.py
repair_link/general/: __init__.py  const.py  custom_logger.py  errors.py  link.py
repair_link/inspector/: __init__.py  anchor_inspector.py  const.py  internal_link_inspector.py  link_fixer.py  link_inspector.py
repair_link/storage/: __init__.py  component_storage.py  const.py  general_storage.py  storage.py
repair_link/user_interaction/: __init__.py  app.py  const.py  frame.py  gui.py  parse_input.py
scripts/: __init__.py  cli.py  format_code.py  list_files.py  no_russian.py  repair_svg.py  terms.py  validate_yaml_file.py
sources/: config.toml  config.yaml  dict.yaml  help.txt  readme.txt  runner.txt  samples.txt  set_env.ps1  set_env.sh  validation.en.json  validation.json
terms/: __init__.py  ascii_doc_table_terms.py  const.py  content_git_page.py  custom_exceptions.py  git_manager.py  http_request.py  init_logger.py  main.py  table.py  user_input.py  version_container.py
tests/: conftest.py  test_cli.py  test_functions.py  test_list_files.py
themes/: base-theme.yml
updates/: set_env.ps1  set_env.sh  set_env.zsh
utilities/: __init__.py
utilities/common/: __init__.py  asciidoc_table.py  asciidoc_table_cell.py  asciidoc_table_column.py  auto_update.py  completion.py  config.py  config_file.py  constants.py  custom_logger.py  errors.py  functions.py  shared.py  table_coordinate.py
utilities/convert_tables/: line_formatter.py  qualified_name.py  xml_file.py  xml_formatter.py
utilities/docx_to_markdown/: line_formatter.py  main.py  qualified_name.py  toml_parser.py  xml_file.py  xml_formatter.py
utilities/get_terms/: ascii_doc_table_terms.py  git_manager.py  table.py
utilities/link_repair/: anchor_inspector.py  const.py  file_dict.py  general_storage.py  internal_link_inspector.py  link.py  link_fixer.py  link_inspector.py
utilities/repair_link/: __init__.py  anchor_inspector.py  const.py  file_dict.py  general_storage.py  internal_link_inspector.py  link.py  link_fixer.py  link_inspector.py
utilities/repair_links/: anchor_inspector.py  const.py  file_dict.py  internal_link_inspector.py  link_fixer.py  link_inspector.py
utilities/scripts/: __init__.py  add_dots.py  api_group.py  args_help_dict.py  check_russian.py  cli.py  completion.py  convert_tables.py  filter_images.py  help.py  (+22 more)
working_scripts/: check_code.py  delete_pycache.py  general.py  generate_executable.py  main.py  make_readme.py  run_flake8.py  run_pyinstaller.py  run_pyment.py  run_vulture.py
(+77 files in other folders)
