[project]
name = "utilities"
version = "2.0.0"
description = "Command line interface commands for technical writers"
authors = ["Andrew Tarasov <tarasov-a@protei.ru>"]
license = "MIT"
readme = "README.adoc"
repository = "https://gitlab.com/tech_writers_protei/utilities/"
requires-python = ">=3.9"
dependencies = [
  "certifi>=2025.1",
  "click>=8.1",
  "loguru>=0.7",
  "more-itertools>=10.6",
  "pillow>=11.1",
  "pip-system-certs>=4.0",
  "python-slugify>=8.0",
  "pyyaml>=6.0",
  "shellingham>=1.5",
]

[project.scripts]
utilities = "__main__.py"

[dependency-groups]
dev = [
  "click-completion>=0.5.2",
  "flake8>=7.1",
  "mypy>=1.15",
  "pyinstaller>=6.12",
  "pytest>=8.3",
  "vulture>=2.14",
]

[tool.uv]
managed = true
package = false
compile-bytecode = true
python-downloads = "never"
python-preference = "managed"
