[project]
name = "utilities"
version = "2.0.1"
description = "Command line interface commands for technical writers"
authors = [
  { name = "Andrew Tarasov", email = "tarasov-a@protei.ru" }
]
license = { text = "MIT License" }
readme = "README.adoc"
requires-python = ">=3.9"
dependencies = [
  "certifi>=2025.1",
  "click>=8.1",
  "loguru>=0.7",
  "more-itertools>=10.6",
  "pillow>=11.1",
  "pip-system-certs>=4.0",
  "python-frontmatter>=1.1",
  "python-slugify>=8.0",
  "pyyaml>=6.0",
  "shellingham>=1.5",
]

[project.scripts]
utilities = "__main__.py"

[dependency-groups]
dev = [
  "flake8>=7.1",
  "mypy>=1.15",
  "pyinstaller>=6.12",
  "pytest>=8.3",
  "vulture>=2.14",
]

[tool.uv]
managed = true
package = false
compile-bytecode = true
python-downloads = "never"
python-preference = "managed"
